- bg image changed to match innovation page’s, tho bg color is different from innovations - tooltip color changed for readability - added a landing page (landing.css, landing.astro) - made the landing page connected to the main museum instead of the homepage (named apollo-guidance-computer.mdx) - moved homepage into a folder inside pages, and edited other pages’ hyperlink back to homepage - fixed homepage’s layout - made the key specs into cards

--- a/src/styles/Innovations.css
+++ b/src/styles/Innovations.css
@@ -334,3 +334,20 @@ html {
     transform: translate(-50%, -50%) translate(var(--tx), var(--ty)) rotate(var(--rot)) scale(0.3);
   }
 }
+
+/* transition */
+body{
+    animation: pageIn .4s ease;
+}
+
+@keyframes pageIn{
+    from{
+        opacity: 0;
+        transform: translateY(8px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
